--- a/customermain.html
+++ b/customermain.html
@@ -54,6 +54,8 @@
 <!-- CATEGORY SECTION -->
 
       <span id="categorydiv">
+        <div data-id=""><img src="photos/appleicon.png" height="30px" width="30px"><br><font size="1"></font></div>
+
         <div ><img src="photos/appleicon.png" height="30px" width="30px"><br><font size="1">Popular</font></div>
         <div ><img src="photos/drinks.png" height="30px" width="30px"><br><font size="1">Drinks</font></div>
         <div ><img src="photos/pizza.png" height="30px" width="30px"><br><font size="1">Pizza</font></div>
