--- a/login.html
+++ b/login.html
@@ -8,6 +8,40 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script>
   <script src="login.js"></script>
+  <script>
+    $(function(){
+      $('#forms').on('submit',function(e){
+        e.preventDefault();
+        let username = $('#username').val()
+        let password = $('#password').val()
+
+        $.ajax({
+          url:'login.php',
+          type:'post',
+          data:{
+            'username':username,
+            'password':password
+          },
+          dataType:'json',
+          success:function(response){
+            if(response.notexists){
+              alert('invalid username or password')
+            }
+            else {
+               if (response.usertype === 'admin') {
+                  window.location.href = 'adminmain.html';
+                } else if (response.usertype === 'customer') {
+                   window.location.href = 'customermain.html';
+                }
+            }
+          },
+          error:function(xhr,status,error){
+              alert("error : "+status+" "+error)
+          }
+        })
+      })
+    })
+  </script>
   
   
 </head>
@@ -16,7 +50,7 @@
   <div class="login-container">
     <h2 style="color: #e6a6a6;font-family:Ephesis;font-size: 35px;">Restaurant Orders</h2>
     <h2 style="color: #e6a6a6;font-family:Ephesis;font-size: 25px;">Login</h2>
-    <form class="login-form" action="login.php" method="post" id="forms">
+    <form class="login-form" action="" method="post" id="forms">
       <div class="form-group">
         
         <input type="text" id="username" name="username" placeholder="Enter your user name" style="background-image: url('photos/user\(1\).png');" required>
@@ -26,11 +60,11 @@
         <input type="password" id="password" name="password" placeholder="Enter your password" style="background-image: url('photos/padlock.png');" required>
       </div>
       <div class="form-group">
-        <br><a href=""><input type="submit" value="Login" class="buttonstyle" name="loginbutton"></a>
+        <br><input id="loginbtn" type="submit" value="Login" class="buttonstyle" name="loginbutton">
       </div>
       <font style="font-family: ephesis;">---- OR ----</font>
       <div class="form-group">
-        <br><a href="registration.html"><input type="button" value="Register" class="buttonstyle"></a>
+        <br><a href="registrationPage.php"><input type="button" value="Register" class="buttonstyle"></a>
       </div>
       <div class="form-group">
         <a href="forgotpass.html" style="text-decoration: none;"><font style="color:#693c3c;font-family:monospace;font-size: 13px;color: #525050;">Forgot Password?</font></a>
