--- a/_iconlink.html
+++ b/_iconlink.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>current trendings</title>
+    <title>Document</title>
 </head>
 <body>
+
+
+    <link rel="icon" type="image/x-icon" href="photos/appleicon.png">
+
 
 </body>
 </html>
