--- a/admin_viewCategories.html
+++ b/admin_viewCategories.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categories</title>
-    <style>img{height: 30px;width: 30px;}</style>
+    <style>.img{height: 30px;width: 30px;}
+    .categoryimg{width: 10px; background-color: #e6a6a6;}</style>
+
 
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -19,8 +21,9 @@
                 let tr = '';
                 for(i=0;i<response.length;i++){
                     tr += '<tr>'
-                        tr += '<td> <img src="photos/'+response[i].categoryimg+'" </td>'
-                        tr += '<td>'+response[i].category+'</td>'   
+                        tr += '<td> <img src="photos/'+response[i].categoryimg+'" class="img"></td>'
+                        tr += '<td>'+response[i].category+'</td>'
+                        tr += '<td> <a href="admin_SelectUpdateCategory.php?id='+response[i].categoryid+'"> <button class="categoryimg">update</button></a><br><br><a href="admin_DeleteCategory.php?id='+response[i].categoryid+'"> <button class="categoryimg">Delete</button></a></td>'   
                     tr += '</tr>'     
                 }
                 $('#dashboardTable').append(tr);
@@ -39,6 +42,7 @@
     <tr> 
         <th>Image</th>
         <th>Category</th>
+        <th></th>
     </tr>
 
    
