--- a/admin_viewFood.html
+++ b/admin_viewFood.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 
     <!-- STYLE FOR FOOD IMAGE -->
-    <style> img{ height: 30px;width: 30px;} </style> 
+    <!-- <style> .foodimage{ height: 30px;width: 30px;} </style>  -->
     
     <!-- JQUERY CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -24,9 +24,11 @@
                     for(i=0;i<response.length;i++){
                         tr += '<tr>'
                         tr += '<td>'+response[i].category+'</td>'
-                        tr += '<td> <img src="photos/'+response[i].foodimage+'" class="foodimage"> </td>'   
+                        tr += '<td><img src="photos/'+response[i].foodimage+'" class="foodimage" style="height: 30px;width: 30px;"></td>'   
                         tr += '<td>'+response[i].foodname+'</td>'
                         tr += '<td>'+response[i].price+'</td>'
+                        tr += '<td><a href="admin_SelectedFood.php?id='+response[i].foodid+'"><button>Update</button></a><br><br><a href="admin_DeletedFood.php?id='+response[i].foodid+'"><button>Delete</button></a>'
+                        tr += '</tr>'    
                     }
                     $('#dashboardTable').append(tr);
                 },
@@ -46,6 +48,7 @@
         <th>Image</th>
         <th>Name</th>
         <th>Price</th>
+        <th></th>
         
     </tr>
 
