--- a/adminmain.html
+++ b/adminmain.html
@@ -5,21 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
-<<<<<<< HEAD
 
   <link rel="icon" type="image/x-icon" href="photos/appleicon.png">
-
-=======
-  <link rel="icon" type="image/x-icon" href="photos/appleicon.png">
->>>>>>> 136f601 (commiit all)
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Ephesis&family=Inconsolata&family=Playfair+Display&family=Roboto+Mono:wght@200&family=Source+Code+Pro:ital,wght@0,200;1,200&display=swap');
-
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
   <script src="adminmain.js"> </script>
+  <script>
+    $(function(){
+
+      $('#insideContainerTable').on('click','tr',function(){
+        
+    })
+    })
+  </script>
   <link href="adminmain.css" rel="stylesheet">
 </head>
 <body>
@@ -33,6 +35,7 @@
       <!-- <div class="menu-item"><a href="admin_viewUsers.html" style="text-decoration: none;">Users</a></div> -->
       <div class="menu-item"><a href="admin_viewCategories.html" style="text-decoration: none;">Categories</a></div>
       <div class="menu-item"><a href="admin_viewFood.html" style="text-decoration: none;">Food Items</a></div>
+      <div class="menu-item"><a href="admin_ViewOrders.html" style="text-decoration: none;">Orders</a></div>
       <div class="menu-item" ><a href="admin_viewFeedbacks.html" style="text-decoration: none;">Feedbacks</a></div>
       <div class="menu-item" ><a href="changepassword.html" style="text-decoration: none;">Edit Password</a></div>
       <div class="menu-item" ><a href="login.html" style="text-decoration: none;">Logout</a></div>
