--- a/admin_viewCategories.html
+++ b/admin_viewCategories.html
@@ -36,7 +36,7 @@
   </script>
 </head>
 <body>
-    <h5>Categories&nbsp;&nbsp; &nbsp; &nbsp;  <a href="admin_addCategories.html"><button style="background-color: #e6a6a6;width:200px;height: 30px;color: white;border-radius: 30px;">Add Categories</button> </a>     </h5>  
+    <h5>Categories&nbsp;&nbsp; &nbsp; &nbsp;  <a href="admin_addCategories.html"><button>Add Categories</button> </a>     </h5>  
   
     <table id="dashboardTable">
     <tr> 
