--- a/adminmain.html
+++ b/adminmain.html
@@ -35,7 +35,7 @@
       <!-- <div class="menu-item"><a href="admin_viewUsers.html" style="text-decoration: none;">Users</a></div> -->
       <div class="menu-item"><a href="admin_viewCategories.html" style="text-decoration: none;">Categories</a></div>
       <div class="menu-item"><a href="admin_viewFood.html" style="text-decoration: none;">Food Items</a></div>
-      <div class="menu-item"><a href="admin_ViewOrders.html" style="text-decoration: none;">Orders</a></div>
+      <div class="menu-item"><a href="admin_ViewOrders.php" style="text-decoration: none;">Orders</a></div>
       <div class="menu-item" ><a href="admin_viewFeedbacks.html" style="text-decoration: none;">Feedbacks</a></div>
       <div class="menu-item" ><a href="changepassword.html" style="text-decoration: none;">Edit Password</a></div>
       <div class="menu-item" ><a href="login.html" style="text-decoration: none;">Logout</a></div>
