--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                if (response.usertype === 'admin') {
                   window.location.href = 'adminmain.html';
                 } else if (response.usertype === 'customer') {
-                   window.location.href = 'customermain.html';
+                   window.location.href = 'customermain.php';
                 }
             }
           },
